[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-client"
version = "0.1.0"
description = "Async Python client for api.browser.vision"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.0",
]

[tool.setuptools.packages.find]
include = ["vision_client*"]